Agentforce/force-app/main/default/objects/Campaign/fields/Actual_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Response_Rate__c</fullName>
    <label>Actual Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>