Agentforce/force-app/main/default/objects/Campaign/fields/Campaign_Level__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Level__c</fullName>
    <description>Picklist field to determine the level of the Campaign</description>
    <label>Campaign Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>