Agentforce/force-app/main/default/objects/Campaign/fields/Customer_Target__c.field-meta.xml
<CustomField>
    <fullName>Customer_Target__c</fullName>
    <label>Customer Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New &amp; Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>