Agentforce/force-app/main/default/objects/Campaign/fields/Marketing_Led_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Led_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Led Campaign</label>
    <type>Checkbox</type>
</CustomField>