Agentforce/force-app/main/default/objects/Campaign/fields/NPS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>NPS_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-181 - Denote a Campaign as an NPS Campaign</description>
    <label>NPS Campaign</label>
    <type>Checkbox</type>
</CustomField>