Agentforce/force-app/main/default/objects/Campaign/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <formula>Owner.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Country</label>
    <type>Text</type>
</CustomField>