Agentforce/force-app/main/default/objects/Campaign/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Brand Engagement</fullName>
            </value>
            <value>
                <fullName>Launch(Product/Service)</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>