Agentforce/force-app/main/default/objects/Campaign/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviation Services</fullName>
            </value>
            <value>
                <fullName>Bundled Soft Services</fullName>
            </value>
            <value>
                <fullName>Cabling &amp; Networks</fullName>
            </value>
            <value>
                <fullName>Car Park Management</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Compliance Services</fullName>
            </value>
            <value>
                <fullName>Energy Management</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Fogging</fullName>
            </value>
            <value>
                <fullName>Front of House &amp; Concierge</fullName>
            </value>
            <value>
                <fullName>Horticulture &amp; Vegetation Management</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Industrial Painting</fullName>
            </value>
            <value>
                <fullName>Industrial Processes</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>M&amp;E Frameworks</fullName>
            </value>
            <value>
                <fullName>M&amp;E Projects</fullName>
            </value>
            <value>
                <fullName>Mail Management</fullName>
            </value>
            <value>
                <fullName>Management Services</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Ports &amp; Rail Services</fullName>
            </value>
            <value>
                <fullName>Poterage</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Security Systems</fullName>
            </value>
            <value>
                <fullName>Space Management</fullName>
            </value>
            <value>
                <fullName>Stewarding</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>