Agentforce/force-app/main/default/objects/Campaign/recordTypes/OCS_ANZ.recordType-meta.xml
<RecordType>
    <fullName>OCS_ANZ</fullName>
    <active>true</active>
    <description>To be used for syncing Campaigns to the OCS - ANZ Account Engagement Business Unit</description>
    <label>OCS - ANZ</label>
</RecordType>