Agentforce/force-app/main/default/objects/Campaign/recordTypes/OCS_APAC.recordType-meta.xml
<RecordType>
    <fullName>OCS_APAC</fullName>
    <active>true</active>
    <description>To be used for syncing Campaigns to the OCS - APAC Account Engagement Business Unit</description>
    <label>OCS - APAC</label>
</RecordType>