Agentforce/force-app/main/default/objects/Campaign/recordTypes/OCS_UK_IRE.recordType-meta.xml
<RecordType>
    <fullName>OCS_UK_IRE</fullName>
    <active>true</active>
    <description>To be used for syncing Campaigns to the OCS - UK &amp; IRE Account Engagement Business Unit</description>
    <label>OCS - UK &amp; IRE</label>
</RecordType>