Agentforce/force-app/main/default/objects/Campaign/recordTypes/PCS.recordType-meta.xml
<RecordType>
    <fullName>PCS</fullName>
    <active>true</active>
    <description>To be used for syncing Campaigns to the PCS Account Engagement Business Unit</description>
    <label>PCS</label>
</RecordType>